--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,2 +1,9 @@
-$color-primary: orangered;
-$color-secondry: yellowgreen;
+@import "abstracts/variables";
+@import "abstracts/functions";
+@import "abstracts/mixins";
+
+@import "base/base";
+@import "base/animation";
+@import "base/typography";
+@import "base/utilites";
+@import "base/grid";
